--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,12 @@ plugins {
 // Change the values below this to your mods values
 // To change the project name, edit the settings.gradle file
 
-project.ext.modID = "fair.examplemod" // The unique id of your mod. Must be all lowercase and cannot use special characters.
-project.ext.modName = "Example Mod" // The display name of your mod.
-project.ext.modVersion = "1.0" // Your current builds version. Must follow the xx.xx... format.
-project.ext.gameVersion = "0.31.0" // The target game version.
-project.ext.modDescription = "Just an example mod" // Short description of what your mod is.
-project.ext.author = "Fair" // Your name
+project.ext.modID = "koltuz.moremounts" // The unique id of your mod. Must be all lowercase and cannot use special characters.
+project.ext.modName = "More Mounts" // The display name of your mod.
+project.ext.modVersion = "1.04" // Your current builds version. Must follow the xx.xx... format.
+project.ext.gameVersion = "0.31.1" // The target game version.
+project.ext.modDescription = "This mod adds a collection of new mounts" // Short description of what your mod is.
+project.ext.author = "Koltuz" // Your name
 
 /**
  * When setting clientside to true, it means servers do not need this mod for clients to connect and vice versa.
@@ -28,7 +28,7 @@ project.ext.clientside = false
 //project.ext.modOptionalDependencies = ["optional.modid1", "optional.modid2"]
 
 // The path to the games install directory
-def gameDirectory = "C:/Program Files (x86)/Steam/steamapps/common/Necesse"
+def gameDirectory = "D:/Steam/steamapps/common/Necesse"
 
 // =================================================
 // ========== DO NOT EDIT BELOW THIS LINE ==========
